# sonata-rp2040

./: .gitignore  CMakeLists.txt  Developer Notes.md  FAT Filesystem.md  README.md  tigard.cfg
tests/: bitstream.bit.uf2  eject.ps1  firmware.elf.uf2  gdb.txt  generate_crc.py  sonata-exceptions.bit  sonata.bit  sonata_top_lrlcd.bit  test_common.py  test_linux.py  test_windows.py  tests.py  uf2_calc_crc.py  unuf2.py  usb_msc.uf2
usb_msc/: CMakeLists.txt  config.c  config.h  crc32.c  crc32.h  elf.h  error.c  error.h  fat_util.c  fat_util.h  flash_util.c  flash_util.h  fpga_program.c  fpga_program.h  main.c  main.h  msc_disk.c  test_names.h  tests.c  tests.h  tusb_config.h  uf2.c  uf2.h  usb_descriptors.c  util.h
